# ocula

./: .flutter-plugins-dependencies  .gitattributes  .gitignore  ARCHITECTURE.md  MODEL_STRATEGY.md  QUICKSTART.md  README.md  TECHNOLOGY.md  pubspec.yaml
.claude/: settings.json
.finailabz/chats/: chat-1777747610338.finailabz-chat
.finailabz/sessions/: 2026-05-02T16-57-41-206Z.json  2026-05-02T18-46-26-806Z.json  2026-05-02T18-48-48-360Z.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  TECHNOLOGY.md  privacy-policy.html
fine_tune_models/: README.md  run_cuda_server.sh  run_moondream_finetune.sh  run_ocula_family.sh  run_pipeline.sh  run_qwen3vl_finetune.sh  run_vision_finetune.sh  setup_env.sh
fine_tune_models/benchmarks/: text_cases.json  vl_cases.json
fine_tune_models/configs/: minilm.yaml  moondream2.yaml  moondream2_vision.yaml  qwen25_1_5b_text.yaml  qwen25vl_7b_vision.yaml  qwen3embedding.yaml  qwen3vl.yaml  qwen3vl_vision.yaml  smolvlm2.yaml  smolvlm2_vision.yaml
fine_tune_models/scripts/: 01_prepare_data.py  02_train_smolvlm2.py  02a_prepare_vision_data.py  02b_train_smolvlm2_vision.py  03_train_moondream2.py  03a_prepare_moondream_data.py  03b_train_moondream2_vision.py  04_train_qwen3vl.py  04_train_text_qwen.py  04a_prepare_qwen3vl_data.py  04b_train_qwen3vl_vision.py  04b_train_vision_qwen.py  05_train_embedding.py  05_train_minilm.py  06_merge_lora.py  07_quantize_gguf.py  07a_export_smolvlm2_gguf.py  07b_export_moondream2_gguf.py  07c_export_qwen3vl_gguf.py  08_evaluate.py  08b_compare_models.py  09_deploy.sh  10_continuous_mlops.py
lib/: main.dart
lib/services/: ai_manager.dart  export_service.dart  speech_service.dart
native/: CMakeLists.txt
ocula-website/: index.html  script.js  styles.css
ocula_app/: .env.prod  .gitignore  ExportOptions.plist  QUICKSTART.md  README.md  build_playstore.sh  fetch_ocula_stack.sh  pubspec.yaml  serve_models.sh
ocula_app/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
ocula_app/android/app/: build.gradle.kts  proguard-rules.pro
ocula_app/android/app/src/main/: AndroidManifest.xml
ocula_app/android/app/src/main/kotlin/com/finailabz/ocula/: MainActivity.kt
ocula_app/android/models_pack/: build.gradle.kts
ocula_app/assets/models/: README.md
ocula_app/ios/: ExportOptions.plist  Gemfile  Podfile  add_share_extension.rb  fix_share_extension.rb
ocula_app/ios/Flutter/: OculaShareExtension.xcconfig
ocula_app/ios/OculaShare/: Info.plist  OculaShare.entitlements  ShareViewController.swift
ocula_app/ios/Runner/: AppDelegate.swift  Info.plist  OculaODRChannel.swift  SceneDelegate.swift
ocula_app/ios/Runner.xcodeproj/: project.pbxproj
ocula_app/ios/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ocula_app/ios/ci_scripts/: ci_post_clone.sh
ocula_app/ios/fastlane/: Fastfile
ocula_app/lib/: main.dart
ocula_app/lib/screens/: .gitignore  enterprise_settings.dart  onboarding_screen.dart  rag_settings.dart  recorder_screen.dart  session_detail_screen.dart  sessions_screen.dart  settings_screen.dart  splash_screen.dart
ocula_app/lib/services/: ai_manager.dart  app_language.dart  env_config.dart  feedback_service.dart  indexer.dart  local_data.dart  mlx_bridge.dart  model_manager.dart  network_permission.dart  notification_service.dart  ocula_db.dart  orchestrator.dart  rag_config.dart  rag_engine.dart  recorder_service.dart  share_receiver.dart  speech_service.dart  text_utils.dart  tray_service.dart
ocula_app/lib/widgets/: help_tour.dart  model_management.dart  ocula_orb.dart  paywall_gate.dart
ocula_app/linux/: CMakeLists.txt
ocula_app/linux/flutter/: generated_plugins.cmake
ocula_app/linux/runner/: my_application.cc
ocula_app/macos/: ExportOptions.plist
ocula_app/macos/Flutter/: GeneratedPluginRegistrant.swift
ocula_app/macos/Runner/: CameraCapture.swift  DebugProfile.entitlements  Info.plist  MLXEngine.swift  MainFlutterWindow.swift  Release.entitlements
ocula_app/macos/Runner.xcodeproj/: project.pbxproj
ocula_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ocula_app/macos/Runner/Configs/: AppInfo.xcconfig
ocula_app/native/: bridge.cpp
ocula_app/plugins/flutter_llama/: llama.cpp  pubspec.yaml
ocula_app/plugins/flutter_llama/android/: build.gradle
ocula_app/plugins/flutter_llama/android/src/main/cpp/: CMakeLists.txt  flutter_llama_bridge.cpp  flutter_llama_multimodal_bridge.cpp
ocula_app/plugins/flutter_llama/example/android/: local.properties
ocula_app/plugins/flutter_llama/example/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ocula_app/plugins/flutter_llama/example/ios/Runner/: GeneratedPluginRegistrant.m
ocula_app/plugins/flutter_llama/example/macos/Flutter/: GeneratedPluginRegistrant.swift
ocula_app/plugins/flutter_llama/example/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
ocula_app/plugins/flutter_llama/ios/: flutter_llama.podspec
ocula_app/plugins/flutter_llama/ios/Classes/: FlutterLlamaPlugin.swift  llama_cpp_bridge.mm  llama_multimodal_bridge.mm  mtmd_sources_internal.mm
ocula_app/plugins/flutter_llama/ios/llama.xcframework/llama.xcframework/: Info.plist
ocula_app/plugins/flutter_llama/lib/src/: flutter_llama.dart  flutter_llama_multimodal.dart
ocula_app/plugins/flutter_llama/lib/src/models/: llama_config.dart
ocula_app/plugins/flutter_llama/macos/: flutter_llama.podspec
ocula_app/plugins/flutter_llama/macos/Classes/: FlutterLlamaPlugin.swift  llama_cpp_bridge.mm  mtmd_sources.mm
ocula_app/plugins/flutter_llama/windows/: CMakeLists.txt  flutter_llama_plugin.cpp  flutter_llama_plugin.h  flutter_llama_plugin_c_api.cpp  flutter_llama_plugin_c_api.h  llama_cpp_bridge_win.cpp  llama_cpp_bridge_win.h
ocula_app/test/: widget_test.dart
ocula_app/test/services/: ai_prompt_test.dart  text_utils_test.dart
ocula_app/web/: index.html  manifest.json
ocula_app/windows/: CMakeLists.txt
ocula_app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
ocula_app/windows/runner/: Runner.rc  main.cpp
(+18 files in other folders)
